--- a/src/slides/methods/evaluating-tests.qmd
+++ b/src/slides/methods/evaluating-tests.qmd
@@ -851,11 +851,13 @@ Some differences:
 
 ```
 ├── README.md
+├── requirements.txt
 ├── dgps
 │   ├── __init__.py 
 │   └── linear.py 
 ├── main.py
-├── results/ 
+├── results
+│   ├── ...
 ├── sim_infrastructure
 │   ├── __init__.py 
 │   ├── orchestrators.py
